datatable download added to test file

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>PoCRA GIS Dashboard</title>
-    <link rel="icon" type="image/x-icon" href="./assets/logo/favicon_.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/logo/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
       rel="stylesheet"
     />
-
     <!-- font awesome -->
     <link rel="stylesheet" href="./css/all_font-awesome.min.css" />
     <!-- Openlayer Style -->
@@ -610,6 +609,7 @@
         </footer>
       </div>
     </div>
+
     <!-- Charts JS -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
