forecast page started

--- a/html/dbt-services/dbt-farmer.html
+++ b/html/dbt-services/dbt-farmer.html
@@ -13,11 +13,7 @@
     <!--  -->
     <!-- <base href="" /> -->
     <!--  -->
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="../../assets/logo/favicon_.ico"
-    />
+    <link rel="icon" type="image/x-icon" href="../../assets/logo/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
       rel="stylesheet"
