--- a/html/dbt-services/dbt-nrm.html
+++ b/html/dbt-services/dbt-nrm.html
@@ -13,11 +13,7 @@
     <!--  -->
     <!-- <base href="" /> -->
     <!-- Favicon for page -->
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="../../assets/logo/favicon_.ico"
-    />
+    <link rel="icon" type="image/x-icon" href="../../assets/logo/favicon.ico" />
     <!-- JQuery and Bootstrap -->
     <script
       type="text/javascript"
@@ -49,9 +45,10 @@
     <script
       language="javascript"
       type="text/javascript"
-      src="../../libs/highcharts/exporting.js"
+      src="../../libs/highcharts/modules/exporting.js"
     ></script>
-    <script src="../../libs/highcharts/accessibility.js"></script>
+    <script src="../../libs/highcharts/modules/export-data.js"></script>
+    <script src="../../libs/highcharts/modules/accessibility.js"></script>
     <!--  -->
     <script
       src="../../libs/plotly/plotly-2.26.0.min.js"
@@ -628,7 +625,6 @@
           </div>
           <!-- Loader Animation -->
           <div id="layer-loader"></div>
-          <div id="test"></div>
           <script>
             var trace1 = {
               x: ["giraffes", "orangutans", "monkeys"],
@@ -676,20 +672,19 @@
         </footer>
       </div>
     </div>
-
-    <!-- external JS files -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-    <!-- Internal JS file -->
-    <!-- Adding OpenLayer library -->
-    <script src="../../libs/ol/dist/ol.js"></script>
-    <!-- Adding OpenLayer Extention -->
-    <script src="../../libs/ol-ext/ol-ext.js"></script>
-    <!-- Internal JS file -->
-    <script src="../../js/api-services-js/pocra-gis-api.js"></script>
-    <script src="../../js/dbt-service-js/pocra-dbt-api.js"></script>
-    <script src="../../js/dbt-service-js/pocra-dbt-nrm-map.js"></script>
-    <!-- Active js -->
-    <script src="../../js/sidebarToggle.js"></script>
-    <script src="../../js/openLayerCustom.js"></script>
   </body>
+  <!-- external JS files -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+  <!-- Internal JS file -->
+  <!-- Adding OpenLayer library -->
+  <script src="../../libs/ol/dist/ol.js"></script>
+  <!-- Adding OpenLayer Extention -->
+  <script src="../../libs/ol-ext/ol-ext.js"></script>
+  <!-- Internal JS file -->
+  <script src="../../js/api-services-js/pocra-gis-api.js"></script>
+  <script src="../../js/dbt-service-js/pocra-dbt-api.js"></script>
+  <script src="../../js/dbt-service-js/pocra-dbt-nrm-map.js"></script>
+  <!-- Active js -->
+  <script src="../../js/sidebarToggle.js"></script>
+  <script src="../../js/openLayerCustom.js"></script>
 </html>
