--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.10.12/css/jquery.dataTables.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.dataTables.min.css"
+    />
     <!-- font awesome -->
     <link rel="stylesheet" href="./css/all_font-awesome.min.css" />
     <!-- Openlayer Style -->
@@ -22,9 +30,11 @@
     <!-- Openlayer Extension Style -->
     <link rel="stylesheet" href="./libs/ol-ext/ol-ext.css" />
     <!-- Custom Style -->
+    <!-- Bootstrap 5 Style -->
     <link href="../../css/customBootstrap.css" rel="stylesheet" />
     <link href="../../css/styles.css" rel="stylesheet" />
     <!-- All functions of bootstrap are declared in custom styles.css, so no need to call additonal bootstrap.css -->
+
     <!-- Bootstrap 5 Style -->
     <!-- 
       <link
@@ -609,41 +619,40 @@
         </footer>
       </div>
     </div>
-
-    <!-- Charts JS -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- data tables demo js (delete in production enviorenment) -->
-    <script src="assets/demo/chart-area-demo.js"></script>
-    <script src="assets/demo/chart-bar-demo.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- data tables demo js (delete in production enviorenment) -->
-    <script src="js/datatables-simple-demo.js"></script>
-    <!-- delete above in production enviorenment -->
-
-    <!-- external JS files -->
-    <!-- Bootstrap 5 JS -->
-    <script src="./libs/bootstrap-5.0.2-dist/js/bootstrap.js"></script>
-    <!-- Internal JS file -->
-    <script src="js/sidebarToggle.js"></script>
-
-    <!-- JQuery JS file -->
-    <script
-      type="text/javascript"
-      src="./libs/jquery/code.jquery.com_jquery-3.7.1.min.js"
-    ></script>
-
-    <!-- Adding OpenLayer library -->
-    <script src="./libs/ol/dist/ol.js"></script>
-    <!-- Adding OpenLayer Extention -->
-    <script src="./libs/ol-ext/ol-ext.js"></script>
-    <!-- Internal JS file -->
-    <script src="./js/dashboard-service-js/pocra-administrative-map.js"></script>
-    <script src="./js/api-services-js/pocra-gis-api.js"></script>
   </body>
+  <!-- Charts JS -->
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
+    crossorigin="anonymous"
+  ></script>
+  <!-- data tables demo js (delete in production enviorenment) -->
+  <script src="assets/demo/chart-area-demo.js"></script>
+  <script src="assets/demo/chart-bar-demo.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
+    crossorigin="anonymous"
+  ></script>
+  <!-- data tables demo js (delete in production enviorenment) -->
+  <script src="js/datatables-simple-demo.js"></script>
+  <!-- delete above in production enviorenment -->
+
+  <!-- external JS files -->
+  <!-- Bootstrap 5 JS -->
+  <script src="./libs/bootstrap-5.0.2-dist/js/bootstrap.js"></script>
+  <!-- Internal JS file -->
+  <script src="js/sidebarToggle.js"></script>
+
+  <!-- JQuery JS file -->
+  <script
+    type="text/javascript"
+    src="./libs/jquery/code.jquery.com_jquery-3.7.1.min.js"
+  ></script>
+
+  <!-- Adding OpenLayer library -->
+  <script src="./libs/ol/dist/ol.js"></script>
+  <!-- Adding OpenLayer Extention -->
+  <script src="./libs/ol-ext/ol-ext.js"></script>
+  <!-- Internal JS file -->
+  <script src="./js/dashboard-service-js/pocra-administrative-map.js"></script>
+  <script src="./js/api-services-js/pocra-gis-api.js"></script>
 </html>
